--- a/_includes/certifications.html
+++ b/_includes/certifications.html
@@ -8,6 +8,13 @@
     {{ certifications.title }}
   </h2>
 
+  {% if certifications.intro %}
+  <div class="intro">
+    <p>{{ certifications.intro }}</p>
+  </div>
+  <!--//intro-->
+  {% endif %}
+
   {% for certifications in certifications.list %}
   <div class="item">
     <div class="meta">
@@ -23,16 +30,12 @@
       <div class="second-upper-row">
         <div class="cert-org">
           {{ certifications.organization }} {% if certifications.credentialid %}
-          ({{ certifications.credentialid }}) {% endif %}
+          {{ certifications.credentialid }} {% endif %}
         </div>
         {% if certifications.credentialurl %}
         <div class="cert-url">
-          <a
-            href="//{{ certifications.credentialurl }}"
-            target="_blank"
-            rel="noreferrer nofollow noopener"
-            >{{ certifications.credentialname }}</a
-          >
+          <a href="//{{ certifications.credentialurl }}" target="_blank" rel="noreferrer nofollow noopener">{{
+            certifications.credentialname }}</a>
         </div>
         {% endif %}
       </div>
